<resources>
    <string name="template1" translatable="false">It is a long established fact that a reader will be</string>
    <string name="templateMulti" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="app_name" translatable="false">FoWS2017</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_news">News</string>
    <string name="menu_item_agenda">Agenda</string>
    <string name="menu_item_sponsors">Sponsors</string>
    <string name="menu_item_contact">Contact</string>
    <string name="menu_item_offer">Offer</string>
    <string name="menu_item_questionnaire">Questionnaire</string>
    <string name="exception_default">ERROR!</string>
    <string name="exception_network">No internet connection!</string>
    <string name="drawer_open">Open</string>
    <string name="open">Open now</string>
    <string name="open_later">Open later</string>
    <string name="drawer_close">Close</string>
    <string name="menu_item_location">Location</string>
    <string name="fows_title" translatable="false">Future of Wireless Systems</string>
    <string name="address" translatable="false">Janiszewskiego 8, 50–370 Wrocław</string>
    <string name="now">now</string>
    <string name="next">next</string>
    <string name="finish1">The conference ended</string>
    <string name="finish2">Thank you for participating :)</string>
    <string name="errorEmail">Unable to send email. Do you have a mail program installed?</string>
    <string name="exception_browser">Unable to start browser</string>
    <string name="exception_map">Can not start the map</string>
    <string name="notStart1">The Agenda is not yet available</string>
    <string name="notStart2">Details soon</string>
    <string name="exception_disable">The option is disabled at the moment</string>
    <string name="fragment_row_questionnaire_other" >Other</string>
    <string name="fragment_row_questionnaire_answer">Answer</string>
    <string name="fragment_row_questionaire_send">Send</string>
    <string name="message_send">Sent correctly</string>
    <string name="message_questionnaire_done">This questionnaire has already been completed by you. Thanks :)</string>
    <string name="exception_incomplete">No fields filled with star (*)</string>
    <string name="offers">Which offers do you want to open?</string>
    <string name="offer1">Partnership proposal</string>
    <string name="offer2">Media partnership</string>
    <string name="StrategicSponsor_0">Strategic Sponsor</string>
    <string name="HonorarySponsor_1">Honorary Sponsor</string>
    <string name="Sponsors_2">Sponsors</string>
    <string name="Partners_8">Partners</string>
    <string name="MediaPartners_10">Media Partners</string>
    <string name="AwardSponsors_12">Award Sponsors</string>
    <string name="menu_item_organisers">Organisers</string>
    <string name="login">Login</string>
    <string name="createAccount">Create account</string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="email">E-mail address*</string>
    <string name="password">Password*</string>
    <string name="emailL" translatable="false">E-mail</string>
    <string name="passwordL">Password</string>
    <string name="password2">Confirm Password*</string>
    <string name="userName">Name*</string>
    <string name="userSurname">Surname*</string>
    <string name="userNameAccount">Name</string>
    <string name="userSurnameAccount">Surname</string>
    <string name="exception_pass_not_equal">Passwords are not the same</string>
    <string name="exception_fail_email">Invalid email</string>
    <string name="message_add_account">Added user. Please check your email to finish the activation.</string>
    <string name="anonymous">Anonymous</string>
    <string name="account">Account</string>
    <string name="signOut">Sign Out</string>
    <string name="message_login_success">Logging successful</string>
    <string name="userUniversity">University</string>
    <string name="userCompany">Company</string>
    <string name="fragment_row_account_info">Account information</string>
    <string name="change_info">Data change</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="change_password">change password</string>
    <string name="message_update_success">The account has been updated</string>
    <string name="exception_update_fail">An error occurred while updating your account</string>
    <string name="signOutSuccess">Signed out successfully</string>
    <string name="signOutFaill">Signed failed</string>
    <string name="exception_require_field">This field can not be empty!</string>
    <string name="exception_login_fail">Wrong username and / or password</string>
    <string name="fragment_row_account_verify_error">Your account has not been verified. Click on the link from the email or email again.</string>
    <string name="send_again">Send again</string>
    <string name="message_email_verify">Again you sent an e-mail verification. Check your email</string>
    <string name="contest">Contest</string>
    <string name="exception_not_loggin">You are not logged in. You can not take part in the competition. First, create and confirm your account.</string>
    <string name="exception_not_verified">Your account is not verified. You have lower priority when answering questions.</string>
    <string name="message_contest_complete">Replies to the contest have already been sent</string>
    <string name="exception_email_exist">A user with such an e-mail address already exists</string>
    <string name="Partners_9">Honorary Partner</string>
</resources>
