<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:weightSum="7">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:layout_weight="1"
        android:elevation="@dimen/card_elevation"
        android:orientation="vertical"
        android:paddingTop="8dp"
        app:cardUseCompatPadding="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_home_presentation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/fragment_home_textview_presentation_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="@dimen/card_padding_between_title_subtitle"
                android:paddingEnd="@dimen/card_padding"
                android:paddingStart="@dimen/card_padding"
                android:text="..."
                android:textColor="@color/primary_text_default_material_light_fows"
                android:textSize="@dimen/card_title_text_size"
                tools:text="1 grudnia 08:00"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toLeftOf="@+id/fragment_home_textview_status"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/fragment_home_textview_presentation_theme"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_weight="1"
                android:paddingEnd="@dimen/card_padding"
                android:paddingStart="@dimen/card_padding"
                android:singleLine="true"
                android:text="..."
                android:textColor="@color/secondary_text_default_material_light_fows"
                android:textSize="@dimen/card_subtitle_text_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_home_textview_presentation_time"
                tools:text="Panel studencki" />

            <TextView
                android:id="@+id/fragment_home_textview_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:alpha="0.8"
                android:textColor="@color/secondary_text_default_material_light_fows"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="następna" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/fragment_menu_layout_items"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:clickable="true"
        android:clipToPadding="true"
        android:foreground="?attr/selectableItemBackground">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_menu_layout_item1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fragment_home_item_background"
            android:backgroundTint="@color/fragment_main_item_color_1"
            android:elevation="@dimen/card_elevation"
            android:tag="NEWS"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/fragment_home_imageView_11"
                android:layout_width="@dimen/fragment_home_icon_size"
                android:layout_height="@dimen/fragment_home_icon_size"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39999998"
                app:srcCompat="@drawable/ic_main_news" />

            <TextView
                android:id="@+id/fragment_home_textView_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="11dp"
                android:text="@string/menu_item_news"
                android:textColor="@color/primary_text_default_material_light_inverse_fows"
                android:textSize="@dimen/fragment_home_item_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_home_imageView_11" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_menu_layout_item2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/fragment_home_item_background"
            android:backgroundTint="@color/fragment_main_item_color_2"
            android:elevation="@dimen/card_elevation"
            android:tag="AGENDA"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/fragment_home_imageView_12"
                android:layout_width="@dimen/fragment_home_icon_size"
                android:layout_height="@dimen/fragment_home_icon_size"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.39999998"
                app:srcCompat="@drawable/ic_main_agenda" />

            <TextView
                android:id="@+id/fragment_home_textView_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/menu_item_agenda"
                android:textColor="@color/primary_text_default_material_light_inverse_fows"
                android:textSize="@dimen/fragment_home_item_size"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_home_imageView_12" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_menu_layout_item3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/fragment_home_item_background"
            android:backgroundTint="@color/fragment_main_item_color_3"
            android:elevation="@dimen/card_elevation"
            android:tag="LOCATION"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <ImageView
                android:id="@+id/fragment_home_imageView_21"
                android:layout_width="@dimen/fragment_home_icon_size"
                android:layout_height="@dimen/fragment_home_icon_size"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/ic_main_location" />

            <TextView
                android:id="@+id/fragment_home_textView_21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/menu_item_location"
                android:textColor="@color/primary_text_default_material_light_inverse_fows"
                android:textSize="@dimen/fragment_home_item_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_home_imageView_21" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/fragment_menu_layout_item4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/fragment_home_item_background"
            android:backgroundTint="@color/fragment_main_item_color_4"
            android:elevation="@dimen/card_elevation"
            android:tag="CONTACT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline3">

            <ImageView
                android:id="@+id/fragment_home_imageView_22"
                android:layout_width="@dimen/fragment_home_icon_size"
                android:layout_height="@dimen/fragment_home_icon_size"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.4"
                app:srcCompat="@drawable/ic_main_contact" />

            <TextView
                android:id="@+id/fragment_home_textView_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/menu_item_contact"
                android:textColor="@color/primary_text_default_material_light_inverse_fows"
                android:textSize="@dimen/fragment_home_item_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_home_imageView_22" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="25dp" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="227dp" />

    </android.support.constraint.ConstraintLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.25"
        android:clipToPadding="true"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/fragment_home_logo_image_parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/fragment_home_logo_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:paddingBottom="@dimen/fragment_home_logo_paddingX2"
                android:paddingEnd="@dimen/fragment_home_logo_padding"
                android:paddingStart="@dimen/fragment_home_logo_padding"
                android:paddingTop="@dimen/fragment_home_logo_padding"
                app:srcCompat="@drawable/logo_wg" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>

